--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title>Tea Cozy</title>
 </head>
 <body>
-    
+    <header>
+        <a href="#" class="logo"><img src="https://content.codecademy.com/courses/freelance-1/unit-4/img-tea-cozy-logo.png" alt=""></a>
+        <ul>
+            <li><a href="#">Mission</a></li>
+            <li><a href="#">Featured Tea</a></li>
+            <li><a href="#">Locations</a></li>
+        </ul>
+    </header>
+    <section class="banner">
+        <h2>Our Mission</h2>
+        <h4>Handpicked, Artisanally Curated, Free Range, </h4>
+    </section>
 </body>
 </html>
