--- a/index.html
+++ b/index.html
@@ -15,9 +15,42 @@
             <li><a href="#">Locations</a></li>
         </ul>
     </header>
-    <section class="banner">
-        <h2>Our Mission</h2>
-        <h4>Handpicked, Artisanally Curated, Free Range, </h4>
+    <section class="bannere">
+        <div class="container">
+            <div class="box">
+                <h2>Our Mission</h2>
+                <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Bacth, Far Trade, Organic Tea</h4>
+            </div>
+        </div>
+    </section>
+    <section class="tea">
+        <div class="container">
+            <h2>Tea of the Month</h2>
+            <h3>What's steeping at The Tea Cozy?</h3>
+        </div>
+        <div class="box">
+            <div class="imbox">
+                <img src="https://content.codecademy.com/courses/freelance-1/unit-4/img-berryblitz.jpg" alt="">
+                <h3>Fall Berry Blitz Tea</h3>
+            </div>
+            <div class="imbox">
+                <img src="https://content.codecademy.com/courses/freelance-1/unit-4/img-berryblitz.jpg" alt="">
+                <h3>Fall Berry Blitz Tea</h3>
+            </div>
+            <div class="imbox">
+                <img src="https://content.codecademy.com/courses/freelance-1/unit-4/img-berryblitz.jpg" alt="">
+                <h3>Fall Berry Blitz Tea</h3>
+            </div>
+            <div class="imbox">
+                <img src="https://content.codecademy.com/courses/freelance-1/unit-4/img-berryblitz.jpg" alt="">
+                <h3>Fall Berry Blitz Tea</h3>
+            </div>
+            <div class="imbox">
+                <img src="https://content.codecademy.com/courses/freelance-1/unit-4/img-berryblitz.jpg" alt="">
+                <h3>Fall Berry Blitz Tea</h3>
+            </div>
+        </div>
+
     </section>
 </body>
 </html>
