--- a/index.html
+++ b/index.html
@@ -34,23 +34,40 @@
                 <h3>Fall Berry Blitz Tea</h3>
             </div>
             <div class="imbox">
-                <img src="https://content.codecademy.com/courses/freelance-1/unit-4/img-berryblitz.jpg" alt="">
+                <img src="https://content.codecademy.com/courses/freelance-1/unit-4/img-spiced-rum.jpg" alt="">
                 <h3>Fall Berry Blitz Tea</h3>
             </div>
             <div class="imbox">
-                <img src="https://content.codecademy.com/courses/freelance-1/unit-4/img-berryblitz.jpg" alt="">
+                <img src="https://content.codecademy.com/courses/freelance-1/unit-4/img-donut.jpg" alt="">
                 <h3>Fall Berry Blitz Tea</h3>
             </div>
             <div class="imbox">
-                <img src="https://content.codecademy.com/courses/freelance-1/unit-4/img-berryblitz.jpg" alt="">
+                <img src="https://content.codecademy.com/courses/freelance-1/unit-4/img-myrtle-ave.jpg" alt="">
                 <h3>Fall Berry Blitz Tea</h3>
             </div>
             <div class="imbox">
-                <img src="https://content.codecademy.com/courses/freelance-1/unit-4/img-berryblitz.jpg" alt="">
+                <img src="https://content.codecademy.com/courses/freelance-1/unit-4/img-bedford-bizarre.jpg" alt="">
                 <h3>Fall Berry Blitz Tea</h3>
             </div>
         </div>
 
+    </section>
+    <section class="location">
+        <h3>Locations</h3>
+        <div class="container">
+            <div class="div_one">
+                <h3>Downtown</h3>
+                <p>384 West 4th St Suite 108 Portland, Maine</p>
+            </div>
+            <div class="div_two">
+                <h3>East Bayside</h3>
+                <p>3433 Phisherman's Avenue (Northwest Corner) Portland, Maine</p>
+            </div>
+            <div class="div_three">
+                <h3>Oakdale</h3>
+                <p>515 Crescent Avenue Second Floor Portland, Maine</p>
+            </div>
+        </div>
     </section>
 </body>
 </html>
