--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
             </div>
             <div class="imbox">
                 <img src="https://content.codecademy.com/courses/freelance-1/unit-4/img-spiced-rum.jpg" alt="">
-                <h3>Fall Berry Blitz Tea</h3>
+                <h3>Spiced Rum Tea</h3>
             </div>
             <div class="imbox">
                 <img src="https://content.codecademy.com/courses/freelance-1/unit-4/img-donut.jpg" alt="">
-                <h3>Fall Berry Blitz Tea</h3>
+                <h3>Seasonal Donuts</h3>
             </div>
             <div class="imbox">
                 <img src="https://content.codecademy.com/courses/freelance-1/unit-4/img-myrtle-ave.jpg" alt="">
-                <h3>Fall Berry Blitz Tea</h3>
+                <h3>Myrtie Ave Tea</h3>
             </div>
             <div class="imbox">
                 <img src="https://content.codecademy.com/courses/freelance-1/unit-4/img-bedford-bizarre.jpg" alt="">
-                <h3>Fall Berry Blitz Tea</h3>
+                <h3>Bedford Bizarre Tea</h3>
             </div>
         </div>
 
@@ -57,17 +57,29 @@
         <div class="container">
             <div class="div_one">
                 <h3>Downtown</h3>
-                <p>384 West 4th St Suite 108 Portland, Maine</p>
+                <p>384 West 4th St<br> 
+                  Suite 108<br>
+                 Portland, Maine</p>
             </div>
             <div class="div_two">
                 <h3>East Bayside</h3>
-                <p>3433 Phisherman's Avenue (Northwest Corner) Portland, Maine</p>
+                <p>3433 Phisherman's Avenue (Northwest Corner) <br> Portland, Maine</p>
             </div>
             <div class="div_three">
                 <h3>Oakdale</h3>
-                <p>515 Crescent Avenue Second Floor Portland, Maine</p>
+                <p>515 Crescent Avenue <br> Second Floor <br> Portland, Maine</p>
             </div>
         </div>
     </section>
+    <div class="footer">
+        <div class="container">
+            <h2>The Tea Cozy</h2>
+            <h5>contact@theteacozy</h5>
+            <p>917-555-8904</p>
+        </div>
+        <div class="copyright">
+            copyright the tea cozy 2017
+        </div>
+    </div>
 </body>
 </html>
